refactor(core): clean up imports and improve code formatting in classes